# image_labeler

./: .env  Cargo.toml  README.md  configuration.yaml
labeler/: .eslintrc.js  package.json
labeler/src/: App.js  index.js  store.js  utils.js
labeler/src/components/: BboxList.js  BboxesFunctionality.js  Canvas.js  FilePicker.js  Footer.js  ImageFolderList.js  ImageFolders.js  Labeler.js  Login.js  RegistrationSuccess.js  SignUp.js  UploadFiles.js
labeler/src/hooks/: useCanvas.js
labeler/src/reducers/: canvasReducer.js  imageReducer.js  sessionReducer.js  uploadReducer.js
labeler/src/services/: auth.js  imageLabels.js
migrations/: 20210606143410_create_images_table.sql
scripts/: init_db.sh
src/: auth.rs  configuration.rs  lib.rs  main.rs  startup.rs  validate.rs
src/data/: mod.rs
src/routes/: image.rs  information.rs  login.rs  mod.rs  upload.rs  user.rs
tests/: tests.rs
